@@ -3,3 +3,5 @@ VOID:STRING,BOOLEAN
 BOOLEAN:POINTER
 VOID:POINTER,STRING
 VOID:POINTER,POINTER
+VOID:INT,INT
+
